# MatrixSwarm

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_INVICTA.md  CODE_OF_CONDUCT.md  DEVELOPMENT.md  DIGITAL_PROPRIOCEPTION.md  PROJECT_CANON.md  Procfile  README.md  ROADMAP.md  SECURITY.md  SECURITY_MODEL.md  THREAT_MODEL.md  WHITEPAPER.md  app.json  docker-compose.demo.yml  docker-compose.yml  firebase-blueprint.json  firestore.rules  index.html  metadata.json  node_simulator.ts  package-lock.json  package.json  replace_db.cjs  server.ts  update_colors.cjs  vite.config.ts
.github/workflows/: build.yml  main.yml
agent/: heartbeat_agent.ts  hello.ts  issuer.ts  matrix_agent.ts  relay_agent.ts  telegram_tma_agent.ts
client-go/: discovery.go  dns.go  engine.go  go.mod  gui.go  main.go  matrix.go  sysproxy.go  updater.go
client-rust/: Cargo.toml
client-rust/src/: acoustic_alarm.rs  aikido.rs  identity.rs  isolation.rs  lib.rs  matrix.rs  network.rs  orchestrator.rs  trust.rs
docs/: ARCHITECTURE.txt  ENGINEERING_SPEC.md  NODE_ARCHITECTURE.md  PARTNERSHIPS_AND_CTA.txt  PHILOSOPHY.md  PRODUCT_AND_BUSINESS.txt  RFC-ESCAPE-CLIENT.md  ROI_AND_IMPACT.txt  TEAM_AND_FUNDING.txt
rust-core/: Cargo.toml
rust-core/pkg/: swarm_wasm.d.ts  swarm_wasm.js
rust-core/src/: acoustic_dsp.rs  agent_logic.rs  aikido.rs  ark_manager.rs  ark_storage.rs  caste.rs  cluster_condor.rs  crdt.rs  entropy_bridge.rs  global_knowledge.rs  holographic_core.rs  identity.rs  lib.rs  mesh_surrogate.rs  metrics.rs  network.rs  network_layer.rs  p2p_queue.rs  planetary_shield.rs  proprioception.rs  reverse_starlink.rs  sandbox.rs  scheduler.rs  seismic_sensor.rs  stegano.rs  swarm_core.rs  swarm_network.rs  tests.rs  trust.rs  vision.rs  visual_kinopsis.rs
src/: App.tsx  TelegramMiniApp.tsx  commissar.ts  db.ts  firebase.ts  index.css  main.tsx
src/apps/: wechat_bridge.ts
src/components/: Aida64Panel.tsx  AkashicRecords.tsx  BriarComm.tsx  ClusterMonitor.tsx  DualPurposeGame.tsx  GovernanceHistory.tsx  KarmaLedger.tsx  KiwixArchive.tsx  Leaderboard.tsx  MagistrateCouncil.tsx  MobileNodeClient.tsx  NetworkTopology.tsx  NodeList.tsx  ObserverHUD.tsx  PlanetaryGrid.tsx  SensoryCortex.tsx  (+8 more)
swarm/: Dockerfile  PRESENTATION.md  docker-compose.yml  node_simulator.ts  requirements.txt
(+56 files in other folders)
