[package]
name = "matrix_swarm_core"
version = "1.2.0"
edition = "2021"
description = "MatrixSwarm Iron Hive - Core Engine for WASM and Native"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
bip39 = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For WASM or cross-platform time
instant = { version = "0.1", features = ["wasm-bindgen"] }
